@@ -23,6 +23,7 @@ Playtester
 Date		Added
 ======
 2007/06/04
+	* Added 11.2 guns to gunslinger shop [Playtester]
 	* Merged various /merchants and /other scripts [Playtester]
 	- including Ammo Dealer, Magazine Dealer and Socket Enchant
 2007/06/03
